[tool.poetry]
name = "casual"
version = "0.1.0"
description = "A casual framework for personal needs."
authors = ["Horia Filimonescu <horia.filimonescu+github@gmail.com>"]
readme = "README.md"
packages = [{ include = "casual", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
